# cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
dev/cmake/: AssembleApp.cmake  BuildAppDir.cmake
lib/: .gitignore  CMakeLists.txt
scripts/: compile-shaders.bat  copy-resources.bat
src/: CMakeLists.txt  main.cpp  typedefs.hpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
