
project(PROJECT_NAME_SRC)

file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")

add_library(PROJECT_NAME_SRC STATIC ${SOURCES} ${HEADERS})
set_target_properties(PROJECT_NAME_SRC PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(PROJECT_NAME_SRC PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
